# Chip-8

./: CMakeLists.txt  LICENSE.txt  ReadMe.md  chip8.c  chip8.h  emulator.c  emulator.h  instruction.c  instruction.h  main.c  screen.c  screen.h
dist-ubuntu/: Chip_8
